# CmakeOpenCV

./: JniOpencvDemo环境配置.md  README.md  import-summary.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/changxiaoyu/jniopencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/changxiaoyu/jniopencvdemo/: CppImageProcessUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/changxiaoyu/jniopencvdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
